tests/snapshots/test_cli__colorize.snap
---
source: tests/test-cli.rs
expression: "suggs_output(&[\"colorize\", \"resources/suggestions-simple.txt\"])"
---

A plain text file with some simple changes.

Some text. An insertion. More text.

Some text. A signed insertion. More text.

Some text. A deletion. More text.

Some text. A signed deletion. More text.

Some text. [A comment.] More text.

Some text. [A signed comment. @author1] More text.

