tests/snapshots/test_cli__diff.snap
---
source: tests/test-cli.rs
expression: "suggs_output(&[\"diff\", \"resources/old.txt\", \"resources/new.txt\"])"
---
The --[previous]--++[new]++ sentence.


